[gd_scene load_steps=18 format=3 uid="uid://njc3v10oijao"]

[ext_resource type="Script" uid="uid://yig6x5k42du" path="res://scenes/characters/enemies/enemy_cat.gd" id="1_7wm75"]
[ext_resource type="Texture2D" uid="uid://dy3ie1amqn31s" path="res://assets/sprites/Cat/death/death_1.png" id="1_vvra5"]
[ext_resource type="Texture2D" uid="uid://dxxh42n4fckr5" path="res://assets/sprites/Cat/death/death_2.png" id="2_7wm75"]
[ext_resource type="Texture2D" uid="uid://dapn4l4eogbun" path="res://assets/sprites/Cat/death/death_3.png" id="3_v4g87"]
[ext_resource type="Texture2D" uid="uid://duymkc6bxh1d6" path="res://assets/sprites/Cat/death/death_4.png" id="4_f2me6"]
[ext_resource type="PackedScene" uid="uid://dild2t48n6rwq" path="res://components/attack_box_component.tscn" id="5_xtjij"]
[ext_resource type="PackedScene" uid="uid://ba7fyo71t3e4s" path="res://components/hit_box_component.tscn" id="6_b7hb6"]
[ext_resource type="PackedScene" uid="uid://deloh73om7myw" path="res://components/hurt_box_component.tscn" id="7_p6ot5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tpdsn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vvra5")
}, {
"duration": 1.0,
"texture": ExtResource("2_7wm75")
}, {
"duration": 1.0,
"texture": ExtResource("3_v4g87")
}, {
"duration": 1.0,
"texture": ExtResource("4_f2me6")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lu16r"]
size = Vector2(20, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wj36d"]
size = Vector2(42, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecndx"]
size = Vector2(20, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rf3v0"]
size = Vector2(29, 8)

[sub_resource type="Animation" id="Animation_xtjij"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBoxComponent/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-11, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DangerDetectorLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-15, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DangerDetectorRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 0)]
}

[sub_resource type="Animation" id="Animation_v4g87"]
resource_name = "move_left"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBoxComponent/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-11, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DangerDetectorLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-15, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DangerDetectorRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}

[sub_resource type="Animation" id="Animation_f2me6"]
resource_name = "move_right"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBoxComponent/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DangerDetectorLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DangerDetectorRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b7hb6"]
_data = {
&"RESET": SubResource("Animation_xtjij"),
&"move_left": SubResource("Animation_v4g87"),
&"move_right": SubResource("Animation_f2me6")
}

[node name="EnemyCat" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_7wm75")
SPEED = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tpdsn")
animation = &"Move"
frame_progress = 0.864773

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_lu16r")

[node name="AttackBoxComponent" parent="." instance=ExtResource("5_xtjij")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBoxComponent"]
position = Vector2(-11, 1)
shape = SubResource("RectangleShape2D_wj36d")
debug_color = Color(0.222235, 0.638751, 0, 0.42)

[node name="HitBoxComponent" parent="." instance=ExtResource("6_b7hb6")]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ecndx")
debug_color = Color(0.961931, 0, 0.507517, 0.42)

[node name="HurtBox" parent="." instance=ExtResource("7_p6ot5")]
collision_mask = 18

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_rf3v0")

[node name="DangerDetectorLeft" type="RayCast2D" parent="."]
position = Vector2(-15, 0)
target_position = Vector2(0, 16)
collision_mask = 9

[node name="DangerDetectorRight" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(0, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b7hb6")
}

[connection signal="chase_begun" from="AttackBoxComponent" to="." method="_on_attack_box_component_chase_begun"]
[connection signal="chase_ended" from="AttackBoxComponent" to="." method="_on_attack_box_component_chase_ended"]
